--- a/aspnet-core/src/Autoboxd.Web/Views/Shared/Components/CommentSection/Index.cshtml
+++ b/aspnet-core/src/Autoboxd.Web/Views/Shared/Components/CommentSection/Index.cshtml
@@ -1,7 +1,10 @@
 ﻿@model Autoboxd.Web.Components.CommentSection.CommentSectionViewModel
 
 <div class="component comment-section">
-    @await Component.InvokeAsync("ContentSection", new { title = Model.Comments.Count().ToString() + (Model.Comments.Count() == 1 ? " comment" : " comments") })
+    @if (Model.ShowHeader)
+    {
+        @await Component.InvokeAsync("ContentSection", new { title = Model.Comments.Count().ToString() + (Model.Comments.Count() == 1 ? " comment" : " comments") })
+    }
 
     <div class="comments container">
         @foreach (var comment in Model.Comments)
