--- a/aspnet-core/src/Autoboxd.Web/Views/Shared/Components/CommentBox/Index.cshtml
+++ b/aspnet-core/src/Autoboxd.Web/Views/Shared/Components/CommentBox/Index.cshtml
@@ -9,7 +9,7 @@
         </div>
         <div class="row" style="background-color: var(--background-color-highlight); padding:12px 0">
             <div class="col-6">
-                <div style="width: 24px; height: 24px; border-radius: 32px; margin-right: 10px; background-color:var(--background-color-highlight-strong); float:left; text-align: center; font-size: 11px; line-height: 24px;">SL</div>
+                <div style="width: 24px; height: 24px; border-radius: 32px; margin-right: 10px; background-color:var(--background-color-highlight-strong); float:left; text-align: center; font-size: 11px; line-height: 24px;">@Model.Comment.Creator.UserName.Substring(0,1)</div>
                 <a style="cursor:pointer;">@Model.Comment.Creator.UserName</a>
             </div>
             <div class="col-6" style="text-align:right">
