--- a/aspnet-core/src/Autoboxd.Web/Pages/Cars/Index.cshtml
+++ b/aspnet-core/src/Autoboxd.Web/Pages/Cars/Index.cshtml
@@ -35,24 +35,23 @@
                     <h3 style="margin-left: 10px; line-height: 50px; opacity: 70%;">@Model.Year</h3>
                 </div>
                 @*<div class="card pl-3 pr-3">
-                        <p>@Html.Raw(Model.Description)</p>
-                    </div>
+            <p>@Html.Raw(Model.Description)</p>
+        </div>
 
-                    <div class="card pl-3 pr-3 mt-3 mb-3">
-                        <p style="height: 300px; line-height: 300px; text-align:center;">Car specifications</p>
-                    </div>*@
+        <div class="card pl-3 pr-3 mt-3 mb-3">
+            <p style="height: 300px; line-height: 300px; text-align:center;">Car specifications</p>
+        </div>*@
 
+                @await Component.InvokeAsync("CommentSection", new { comments = Model.Comments })
                 @if (CurrentUser.IsAuthenticated)
                 {
-                    @await Component.InvokeAsync("CommentSection", new { comments = Model.Comments })
-
                     <abp-input asp-for="@Model.Comment" label="Add a comment" />
 
                     <a abp-button="Primary" id="postComment">Post comment</a>
                 }
                 else
                 {
-                    <div>Please <a href="/account/login">login</a> to post a comment!</div>
+                    <div class="text-center">Please <a href="/account/login">login</a> to post a comment!</div>
                 }
             </div>
         </div>
