--- a/aspnet-core/src/Autoboxd.Web/Views/Shared/Components/CommentSection/Index.cshtml
+++ b/aspnet-core/src/Autoboxd.Web/Views/Shared/Components/CommentSection/Index.cshtml
@@ -10,7 +10,10 @@
         @foreach (var comment in Model.Comments)
         {
         <div class="comment row">
-            <div class="col-2">@comment.Creator.UserName</div>
+            <div class="col-2">
+                <div style="width: 24px; height: 24px; border-radius: 32px; margin-right: 10px; background-color:var(--background-color-highlight-strong); float:left; text-align: center; font-size: 11px; line-height: 24px;">@comment.Creator.UserName.Substring(0,1)</div>
+                @comment.Creator.UserName
+            </div>
             <div class="col-10">@comment.Value</div>
         </div>
         <hr class="dropdown-divider" /> // TODO: Better class name
