--- a/aspnet-core/src/Autoboxd.Web/wwwroot/global-styles.css
+++ b/aspnet-core/src/Autoboxd.Web/wwwroot/global-styles.css
@@ -133,6 +133,11 @@ a {
     text-decoration: none;
 }
 
+.component.item-link:hover a {
+    text-decoration: none;
+    color: initial;
+}
+
 .component.item-link .name {
     text-transform: uppercase;
     font-size: 14px;
