--- a/aspnet-core/src/Autoboxd.Web/Pages/Cars/Index.cshtml
+++ b/aspnet-core/src/Autoboxd.Web/Pages/Cars/Index.cshtml
@@ -31,9 +31,13 @@
                 <div class="d-none" id="itemId">@Model.ItemId</div>
             </div>
             <div class="col-12 col-lg-9">
-                <div class="title" style="display: flex;">
-                    <h2>@Model.Brand @Model.Name</h2>
-                    <h3 style="margin-left: 10px; line-height: 50px; opacity: 70%;">@Model.Year</h3>
+                <div class="title" style="width: 100%; height: 50px;">
+                    <div style="float:left;">
+                        <h2>@Model.Brand @Model.Name</h2>
+                    </div>
+                    <div>
+                        <h3 style="margin-left: 10px; line-height: 42px; opacity: 70%; float:right;">@Model.Year</h3>
+                    </div>
                 </div>
                 @*<div class="card pl-3 pr-3">
             <p>@Html.Raw(Model.Description)</p>
@@ -99,8 +103,8 @@
 <script>
     tinymce.init({
         selector: 'textarea',
-      plugins: 'casechange formatpainter linkchecker autolink lists checklist media mediaembed pageembed permanentpen powerpaste table',
-        toolbar: 'undo redo | forecolor | bold italic | alignleft aligncenter alignright alignjustify | outdent indent | link image casechange',
+      plugins: 'autolink lists media table',
+        toolbar: 'undo redo | forecolor | bold italic | alignleft aligncenter alignright alignjustify | outdent indent | link image',
       toolbar_mode: 'floating',
       tinycomments_mode: 'embedded',
       tinycomments_author: 'Author name',
